src/styles/Ribbon.css
.Ribbon {
    display: flex;
    gap: 1em;
    justify-content: space-between;
    align-items: center;

    width: 100vw; 
    padding-inline: 1em;
    box-sizing: border-box;

    border-bottom: 2px solid white;
    align-items: center;
}

#logo_ribbon {
    transform: scale(0.2,0.2);
    margin-right: -20em;
    margin-left: -20em;
    margin-top: -10em;
    margin-bottom: -10em;
    height:fit-content;

    grid-area: a;
}

#nothing {
    flex-grow: 1;
}

#profile {
    width: fit-content;
    background-color: rgb(62, 64, 199);
    border: 2px solid rgb(110, 112, 203);
}

#profile:hover {
    background-color: rgb(37, 40, 196);
    border-color: rgb(62, 64, 199);
}

#logout {
    background-color: rgb(194, 57, 103);
    border: 2px solid rgb(195, 112, 139);
}

#logout:hover {
    background-color: rgb(195, 28, 84);
    border-color: rgb(194, 57, 103);
}

